src/plugin.scss
// Sass for videojs-dvrseekbar

.video-js {

  // This class is added to the video.js element by the plugin by default.
  &.vjs-dvrseekbar {
    display: block;
  }
}

.vjs-control-bar.vjs-dvrseekbar-control-bar {
  display: flex;
}

.vjs-dvrseekbar-control-bar {
  .vjs-current-time, .vjs-duration, .vjs-remaining-time, .vjs-time-divider {
    display: none;
  }
  .vjs-live-display {
    display: none;
  }
}

.vjs-control-bar.vjs-dvrseekbar-control-bar {

  .vjs-dvrseekbar-progress-control {
    position: relative;
    height: 3em;
    background: 0 0;
    padding: 0 1em;
    top: 0;
  }
  .vjs-live-button {
    display: block;
    text-align: center;
    cursor: pointer;
    float: right;
    line-height: 1em;
    padding: 1em 1em;

  }
}

.vjs-control-bar.vjs-dvrseekbar-control-bar {
  .vjs-progress-control.vjs-control .vjs-slider {
    .vjs-control-text {
      &:before {
        height: 0;
      }
      &:after {
        content: ' \25BC';
        color: #000;
        top: 1.25em;
        position: relative;
        left: -1.55em;
        font-size: 1.5em;
      }
    }
    .vjs-seek-handle.vjs-slider-handle {
      line-height: .2em;
      position: relative;
      top: -.21em;
      -webkit-top: -.3em;
      float: left;
    }
  }
  .vjs-progress-control .vjs-slider .vjs-seek-handle.vjs-slider-handle:before {
    content: ' \25CF';
    font-size: 2em;
    transition: font-size .2s;
    -webkit-transition: font-size .2s;
    -moz-transition: font-size .2s;
    -ms-transition: font-size .2s;
    -o-transition: font-size 0.2s;
  }
}

.vjs-user-inactive .vjs-control-bar.vjs-dvrseekbar-control-bar .vjs-progress-control .vjs-slider .vjs-seek-handle:before {
  font-size: 0;
  transition-delay: 3s;
  -webkit-transition-delay: 3s;
  -moz-transition-delay: 3s;
  -ms-transition-delay: 3s;
  -o-transition-delay: 3s;
}

.vjs-live-label {
  padding: 1px 3px 2px;
  font-size: 9.75px;
  font-weight: bold;
  color: #ffffff;
  text-transform: uppercase;
  white-space: nowrap;
  background-color: #bfbfbf;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  &.important {
    background-color: #c43c35;
  }
  &.onair {
    background-color: #46a546;
  }
}

